fixed mobile layout not showing properly 1) navbar is now scrollable 2) meeting name will be shown and made scrollable

--- a/bigbluebutton-html5/imports/ui/components/app/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/app/styles.scss
@@ -24,6 +24,7 @@
   position: relative;
   text-align: center;
 
+  overflow-x: auto;
   font-size: 1.5rem;
   padding: var(--bars-padding) var(--bars-padding) 0 var(--bars-padding);
   height: 7rem;
@@ -46,7 +47,7 @@
   display: flex;
   flex-direction: column;
   overflow-y: auto;
-  overflow-x: hidden;
+  overflow-x: auto;
 
   @include mq($small-only) {
     top: 0;
