--- a/bigbluebutton-html5/imports/ui/components/nav-bar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/nav-bar/styles.scss
@@ -51,8 +51,8 @@
   margin: 0;
   padding: 0;
   white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  overflow: auto;
+  text-overflow: initial;
   max-width: 30vw;
 
   > [class^="icon-bbb-"] {
